deployments/openshift/kustomize/base/frontend/networkpolicy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-ingress-frontend
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
    - {}
  policyTypes:
    - Ingress
